(bug fix) the our clients border wasn't vertically aligned

--- a/src/app/fancy-slider/slide-description/_slide-description.scss
+++ b/src/app/fancy-slider/slide-description/_slide-description.scss
@@ -216,6 +216,7 @@
       width: $this-clients-to-date-width;
 
       .clients-to-date {
+        height: 100%;
         // This fixes an issues in IE: the positioned element inside this isn't
         // affected by the opacity property.
         position: relative;
